--- a/LSTM/LSTM example on IMDB data.ipynb
+++ b/LSTM/LSTM example on IMDB data.ipynb
@@ -50,8 +50,6 @@
      "output_type": "stream",
      "text": [
       "Loading data...\n",
-      "Downloading data from https://s3.amazonaws.com/text-datasets/imdb.npz\n",
-      "17465344/17464789 [==============================] - 4s 0us/step\n",
       "25000 train sequences\n",
       "25000 test sequences\n"
      ]
@@ -67,6 +65,26 @@
     "(x_train, y_train), (x_test, y_test) = imdb.load_data(num_words=max_features)\n",
     "print(len(x_train), 'train sequences')\n",
     "print(len(x_test), 'test sequences')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, ..., 0, 1, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train"
    ]
   },
   {
