--- a/LSTM/LSTMmodel.ipynb
+++ b/LSTM/LSTMmodel.ipynb
@@ -483,7 +483,7 @@
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(padded_docs, respList, test_size=0.2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(padded_docs, respList, test_size=0.2, random_state=45)\n",
     "print(X_train.shape, 'train sequences')\n",
     "print(X_test.shape, 'test sequences')"
    ]
@@ -581,48 +581,48 @@
       "Train...\n",
       "Train on 13581 samples, validate on 3396 samples\n",
       "Epoch 1/20\n",
-      "13581/13581 [==============================] - 1076s 79ms/step - loss: 0.3355 - acc: 0.8803 - val_loss: 0.3197 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1029s 76ms/step - loss: 0.3340 - acc: 0.8799 - val_loss: 0.3193 - val_acc: 0.8856\n",
       "Epoch 2/20\n",
-      "13581/13581 [==============================] - 1059s 78ms/step - loss: 0.3213 - acc: 0.8817 - val_loss: 0.3045 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1019s 75ms/step - loss: 0.3216 - acc: 0.8810 - val_loss: 0.3038 - val_acc: 0.8856\n",
       "Epoch 3/20\n",
-      "13581/13581 [==============================] - 1042s 77ms/step - loss: 0.3112 - acc: 0.8818 - val_loss: 0.3001 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1009s 74ms/step - loss: 0.3118 - acc: 0.8810 - val_loss: 0.2981 - val_acc: 0.8856\n",
       "Epoch 4/20\n",
-      "13581/13581 [==============================] - 1045s 77ms/step - loss: 0.3086 - acc: 0.8818 - val_loss: 0.2987 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1016s 75ms/step - loss: 0.3094 - acc: 0.8810 - val_loss: 0.2968 - val_acc: 0.8856\n",
       "Epoch 5/20\n",
-      "13581/13581 [==============================] - 1074s 79ms/step - loss: 0.3064 - acc: 0.8818 - val_loss: 0.2967 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1022s 75ms/step - loss: 0.3061 - acc: 0.8810 - val_loss: 0.2964 - val_acc: 0.8856\n",
       "Epoch 6/20\n",
-      "13581/13581 [==============================] - 1077s 79ms/step - loss: 0.3046 - acc: 0.8818 - val_loss: 0.2989 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1028s 76ms/step - loss: 0.3057 - acc: 0.8810 - val_loss: 0.2988 - val_acc: 0.8856\n",
       "Epoch 7/20\n",
-      "13581/13581 [==============================] - 1075s 79ms/step - loss: 0.3042 - acc: 0.8818 - val_loss: 0.2960 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1026s 76ms/step - loss: 0.3047 - acc: 0.8810 - val_loss: 0.2967 - val_acc: 0.8856\n",
       "Epoch 8/20\n",
-      "13581/13581 [==============================] - 1069s 79ms/step - loss: 0.3055 - acc: 0.8818 - val_loss: 0.2991 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1017s 75ms/step - loss: 0.3082 - acc: 0.8810 - val_loss: 0.2997 - val_acc: 0.8856\n",
       "Epoch 9/20\n",
-      "13581/13581 [==============================] - 1078s 79ms/step - loss: 0.3086 - acc: 0.8818 - val_loss: 0.2980 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1018s 75ms/step - loss: 0.3055 - acc: 0.8810 - val_loss: 0.3021 - val_acc: 0.8856\n",
       "Epoch 10/20\n",
-      "13581/13581 [==============================] - 1043s 77ms/step - loss: 0.3042 - acc: 0.8818 - val_loss: 0.2982 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1014s 75ms/step - loss: 0.3098 - acc: 0.8810 - val_loss: 0.2984 - val_acc: 0.8856\n",
       "Epoch 11/20\n",
-      "13581/13581 [==============================] - 1041s 77ms/step - loss: 0.3025 - acc: 0.8818 - val_loss: 0.2994 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1019s 75ms/step - loss: 0.3115 - acc: 0.8810 - val_loss: 0.3109 - val_acc: 0.8856\n",
       "Epoch 12/20\n",
-      "13581/13581 [==============================] - 1041s 77ms/step - loss: 0.3037 - acc: 0.8818 - val_loss: 0.2974 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1034s 76ms/step - loss: 0.3151 - acc: 0.8810 - val_loss: 0.3030 - val_acc: 0.8856\n",
       "Epoch 13/20\n",
-      "13581/13581 [==============================] - 1046s 77ms/step - loss: 0.3029 - acc: 0.8818 - val_loss: 0.2981 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1018s 75ms/step - loss: 0.3066 - acc: 0.8810 - val_loss: 0.3033 - val_acc: 0.8856\n",
       "Epoch 14/20\n",
-      "13581/13581 [==============================] - 1041s 77ms/step - loss: 0.3012 - acc: 0.8818 - val_loss: 0.2969 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1028s 76ms/step - loss: 0.3113 - acc: 0.8810 - val_loss: 0.3133 - val_acc: 0.8856\n",
       "Epoch 15/20\n",
-      "13581/13581 [==============================] - 1059s 78ms/step - loss: 0.3006 - acc: 0.8818 - val_loss: 0.2958 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1017s 75ms/step - loss: 0.3107 - acc: 0.8810 - val_loss: 0.3008 - val_acc: 0.8856\n",
       "Epoch 16/20\n",
-      "13581/13581 [==============================] - 1059s 78ms/step - loss: 0.2978 - acc: 0.8818 - val_loss: 0.2941 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1019s 75ms/step - loss: 0.3142 - acc: 0.8810 - val_loss: 0.3088 - val_acc: 0.8856\n",
       "Epoch 17/20\n",
-      "13581/13581 [==============================] - 1044s 77ms/step - loss: 0.2959 - acc: 0.8817 - val_loss: 0.2927 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1016s 75ms/step - loss: 0.3104 - acc: 0.8810 - val_loss: 0.3031 - val_acc: 0.8856\n",
       "Epoch 18/20\n",
-      "13581/13581 [==============================] - 1040s 77ms/step - loss: 0.2925 - acc: 0.8818 - val_loss: 0.2930 - val_acc: 0.8826\n",
+      "13581/13581 [==============================] - 1014s 75ms/step - loss: 0.3113 - acc: 0.8811 - val_loss: 0.3073 - val_acc: 0.8856\n",
       "Epoch 19/20\n",
-      "13581/13581 [==============================] - 1042s 77ms/step - loss: 0.2888 - acc: 0.8815 - val_loss: 0.2898 - val_acc: 0.8827\n",
+      "13581/13581 [==============================] - 1015s 75ms/step - loss: 0.3086 - acc: 0.8812 - val_loss: 0.3102 - val_acc: 0.8855\n",
       "Epoch 20/20\n",
-      "13581/13581 [==============================] - 1049s 77ms/step - loss: 0.2852 - acc: 0.8814 - val_loss: 0.2881 - val_acc: 0.8841\n",
-      "3396/3396 [==============================] - 20s 6ms/step\n",
-      "Test score: 0.2880987490585471\n",
-      "Test accuracy: 0.8841073732774867\n"
+      "13581/13581 [==============================] - 1021s 75ms/step - loss: 0.3094 - acc: 0.8813 - val_loss: 0.3064 - val_acc: 0.8856\n",
+      "3396/3396 [==============================] - 19s 6ms/step\n",
+      "Test score: 0.306444063414112\n",
+      "Test accuracy: 0.8856217599308253\n"
      ]
     }
    ],
@@ -650,95 +650,49 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.2639569 , 0.99713176, 0.147854  , ..., 0.2781609 , 0.3156662 ,\n",
-       "        0.03538683],\n",
-       "       [0.28967637, 0.71446157, 0.00817609, ..., 0.01129854, 0.00712949,\n",
-       "        0.02284107],\n",
-       "       [0.31374842, 0.7538619 , 0.01175034, ..., 0.01495564, 0.01010719,\n",
-       "        0.02720055],\n",
-       "       ...,\n",
-       "       [0.3152582 , 0.75635207, 0.01200652, ..., 0.01520216, 0.01031786,\n",
-       "        0.02746704],\n",
-       "       [0.35040504, 0.8058778 , 0.01989132, ..., 0.02245823, 0.01678368,\n",
-       "        0.03489265],\n",
-       "       [0.37747467, 0.9785884 , 0.1230244 , ..., 0.14413857, 0.1511957 ,\n",
-       "        0.05858377]], dtype=float32)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.27086473, 0.6843819 , 0.00603414, 0.00130618, 0.00888586,\n",
-       "       0.00531185, 0.01952749], dtype=float32)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred[30]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 0, 0, 0, 0, 0, 0], dtype=int64)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test[30]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7449991279084409\n"
+      "0.6493408468565836\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
-    "auc = roc_auc_score(y_test, y_pred, multi_class='ovr')\n",
+    "auc = roc_auc_score(y_test, y_pred, multi_class='ovr') #change to 'ovo'\n",
     "print(auc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IsQuestion  acc:  0.5769982027993465  roc:  0.5432855881267196\n",
+      "IsInstructionalUtterance  acc:  0.7266109760574233  roc:  0.6096532612610469\n",
+      "IsEvaluationElaborated  acc:  0.8670412039360113  roc:  0.6238970255613329\n",
+      "CogLevel  acc:  0.9332272699640272  roc:  0.7149314003784808\n",
+      "IsGoalSpecified  acc:  0.8369712679349632  roc:  0.774821772418852\n",
+      "IsDisciplinaryTermsPresent  acc:  0.8242710757346822  roc:  0.7337885935955375\n",
+      "Authenticity acc:  0.9063522678452189  roc:  0.5450082866541153\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('IsQuestion  acc: ',1-sum(abs(y_test[:,0] - y_pred[:,0]))/len(y_test),' roc: ', roc_auc_score(y_test[:,0], y_pred[:,0]))\n",
+    "print('IsInstructionalUtterance  acc: ',1-sum(abs(y_test[:,1] - y_pred[:,1]))/len(y_test),' roc: ', roc_auc_score(y_test[:,1], y_pred[:,1]))\n",
+    "print('IsEvaluationElaborated  acc: ',1-sum(abs(y_test[:,2] - y_pred[:,2]))/len(y_test),' roc: ', roc_auc_score(y_test[:,2], y_pred[:,2]))\n",
+    "print('CogLevel  acc: ',1-sum(abs(y_test[:,3] - y_pred[:,3]))/len(y_test),' roc: ', roc_auc_score(y_test[:,3], y_pred[:,3]))\n",
+    "print('IsGoalSpecified  acc: ',1-sum(abs(y_test[:,4] - y_pred[:,4]))/len(y_test),' roc: ', roc_auc_score(y_test[:,4], y_pred[:,4]))\n",
+    "print('IsDisciplinaryTermsPresent  acc: ',1-sum(abs(y_test[:,5] - y_pred[:,5]))/len(y_test),' roc: ', roc_auc_score(y_test[:,5], y_pred[:,5]))\n",
+    "print('Authenticity acc: ',1-sum(abs(y_test[:,6] - y_pred[:,6]))/len(y_test),' roc: ', roc_auc_score(y_test[:,6], y_pred[:,6]))"
    ]
   },
   {
